--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sparticuz/chromium": "^143.0.0",
     "@supabase/supabase-js": "^2.39.0",
+    "lucide-react": "^0.562.0",
     "next": "14.1.0",
     "openai": "^4.28.0",
     "playwright-core": "^1.57.0",
