switch to cheerio for html parsing

--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "@sparticuz/chromium": "^143.0.0",
     "@supabase/auth-helpers-nextjs": "^0.15.0",
     "@supabase/supabase-js": "^2.89.0",
-    "@types/jsdom": "^27.0.0",
+    "cheerio": "^1.1.2",
     "dotenv": "^17.2.3",
-    "jsdom": "^27.3.0",
     "lucide-react": "^0.562.0",
     "next": "14.1.0",
     "openai": "^4.28.0",
