--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@sparticuz/chromium": "^143.0.0",
     "@supabase/auth-helpers-nextjs": "^0.15.0",
     "@supabase/supabase-js": "^2.89.0",
-    "cheerio": "^1.1.2",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.562.0",
     "next": "14.1.0",
+    "node-html-parser": "^7.0.1",
     "openai": "^4.28.0",
     "playwright": "^1.57.0",
     "playwright-core": "^1.57.0",
