--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "playwright": "^1.57.0",
     "playwright-core": "^1.57.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "stripe": "^20.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
