--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "playwright": "^1.57.0",
     "playwright-core": "^1.57.0",
     "react": "^18",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18",
     "stripe": "^20.1.0"
   },
